# ocaml-dispatch

./: .gitignore  .merlin  .travis.yml  CHANGES.md  Makefile  README.md  _oasis  _tags  dispatch-js.opam  dispatch.opam  dune-project  myocamlbuild.ml  setup.ml
doc/: api.odocl
js/: dispatch_js.ml  dispatch_js.mli  dune  jbuild  js.mllib
lib/: META  dispatch.ml  dispatch.mldylib  dispatch.mli  dune  jbuild
lib_test/: test_dispatch.ml
opam/: descr  opam
test/: dune  jbuild  test_dispatch.ml
