opam-version: "2.0"
maintainer: "Spiros Eliopoulos <spiros@inhabitedtype.com>"
authors: "Spiros Eliopoulos <spiros@inhabitedtype.com>"
license: "BSD-3-clause"
homepage: "https://github.com/inhabitedtype/ocaml-dispatch"
bug-reports: "https://github.com/inhabitedtype/ocaml-dispatch/issues"
depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {>= "3.0"}
  "dispatch" {>="0.4.0"}
  "js_of_ocaml-lwt" {>= "3.5.0"}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/inhabitedtype/ocaml-dispatch.git"
synopsis: "Path-based dispatch: js_of_ocaml-specific support"
description: """
ocaml-dispatch provides a basic mechanism for dispatching a request to a
handler based on hierarchical path names conventionally found in URIs. It can be
used both for dispatching requests in a server, as well as handing changes to
hierarchical fragments in a client-side application.

This library provides a JavaScript interface for dispatching
events based on DOM events.
"""
